# docling.rs

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  COMPARING.md  Cargo.toml  MIGRATION.md  MODELS_NOTICE.md  PDF_CONFORMANCE.md  PDF_PARSER_NOTES.md  PDF_PERFORMANCE.md  README.md  elife-56337.dclx  onnxruntime_profile__2026-07-15_18-45-29_434.json  pftaps057006474.dclx
crates/docling/: Cargo.toml  sample.html  sample.md
crates/docling-asr/: Cargo.toml
crates/docling-asr/src/: audio.rs  lib.rs  mel.rs  tokenizer.rs  whisper.rs
crates/docling-cli/: Cargo.toml
crates/docling-cli/src/: main.rs
crates/docling-core/: Cargo.toml
crates/docling-core/src/: base64.rs  chunker.rs  doclang.rs  doctags.rs  document.rs  json.rs  lib.rs  markdown.rs
crates/docling-crab/: Cargo.toml  sample.html  sample.md
crates/docling-crab-cli/: Cargo.toml
crates/docling-crab-cli/src/: main.rs
crates/docling-crab-core/: Cargo.toml
crates/docling-crab-core/src/: base64.rs  document.rs  json.rs  labels.rs  lib.rs  markdown.rs
crates/docling-crab-pdf/: Cargo.toml
crates/docling-crab-pdf/examples/: extract.rs  layout.rs  snapshot.rs
crates/docling-crab-pdf/src/: assemble.rs  layout.rs  lib.rs  mets.rs  ocr.rs  pdfium_backend.rs
crates/docling-crab/examples/: convert.rs
crates/docling-crab/src/: converter.rs  error.rs  format.rs  lib.rs  result.rs  source.rs
crates/docling-crab/src/backend/: asciidoc.rs  csv.rs  deepseek.rs  docling_json.rs  docx.rs  email.rs  epub.rs  html.rs  jats.rs  latex.rs  markdown.rs  mod.rs  odf.rs  omml.rs  ooxml.rs  pptx.rs  uspto.rs  webvtt.rs  xbrl.rs  xlsx.rs
crates/docling-crab/tests/: regression.rs
crates/docling-crab/tests/data/: .gitattributes
crates/docling-node/: .gitignore  Cargo.toml  README.md  build.rs  deps.js  index.d.ts  index.js  package.json
crates/docling-node/cuda/: .gitignore  README.md  make-package.mjs  postinstall.js
crates/docling-node/examples/: bun-basic.ts  node-basic.mjs  package.json  pdf-pipeline.mjs
crates/docling-node/examples/inputs/: sample.html
crates/docling-node/src/: lib.rs
crates/docling-node/test/: smoke.mjs
crates/docling-pdf/: Cargo.toml
crates/docling-pdf/examples/: dump_chars.rs  dump_regions.rs  dump_render_modes.rs  dump_stages.rs  extract.rs  layout.rs  probe_page.rs  snapshot.rs  textparse_dump.rs  textparse_glyphs.rs  tf_otsl.rs  word_cells.rs
crates/docling-pdf/src/: assemble.rs  dp_lines.rs  enrich.rs  ep.rs  layout.rs  lib.rs  mets.rs  ocr.rs  ocr_prep.rs  pdfium_backend.rs  reading_order.rs  resample.rs  scanned.rs  tableformer.rs  textparse.rs  tf_core.rs  tf_match.rs  timing.rs
crates/docling-pdf/tests/: text_layer.rs
crates/docling-py/: Cargo.toml  README.md  pyproject.toml
crates/docling-py/python/docling_rs/: __init__.py  chunking.py  document_converter.py  exceptions.py  models.py  options.py
crates/docling-py/python/docling_rs/datamodel/: __init__.py  accelerator_options.py  base_models.py  document.py  pipeline_options.py
crates/docling-py/src/: lib.rs
crates/docling-py/tests/: test_chunking.py  test_config.py  test_dropin.py  test_namespace_parity.py
crates/docling-serve/: Cargo.toml  Dockerfile
crates/docling-serve/src/: index.html  lib.rs  main.rs
crates/docling-serve/tests/: api.rs
crates/docling-wasm/: Cargo.toml  LICENSE  README.md
crates/docling-wasm/src/: lib.rs  ocr.rs  scanned.rs  tableformer.rs
crates/docling-wasm/www/: coi.js  ocr.html  pipeline.js  scan.html  worker.js
crates/docling/benches/: parse.rs
crates/docling/examples/: convert.rs  stream.rs
crates/docling/src/: chunks.rs  converter.rs  error.rs  format.rs  lib.rs  result.rs  source.rs  stream.rs  vlm.rs
crates/docling/src/backend/: asciidoc.rs  browser.rs  cfb.rs  csv.rs  deepseek.rs  doc.rs  doclang.rs  docling_json.rs  docx.rs  email.rs  epub.rs  html.rs  images.rs  jats.rs  latex.rs  markdown.rs  mhtml.rs  mod.rs  odf.rs  officeart.rs  omml.rs  ooxml.rs  ppt.rs  pptx.rs  uspto.rs  webvtt.rs  xbrl.rs  xls.rs  xlsx.rs  xlsx_drawings.rs
crates/docling/tests/: regression.rs  vlm.rs
crates/fleischwolf/: Cargo.toml
crates/fleischwolf-cli/: Cargo.toml
crates/fleischwolf-cli/src/: main.rs
crates/fleischwolf-node/: .gitignore  Cargo.toml  README.md  deps.js  index.d.ts  index.js  package.json
crates/fleischwolf-node/examples/: .gitignore  bun-basic.ts  node-basic.mjs  package.json  pdf-pipeline.mjs
crates/fleischwolf-node/examples/inputs/: sample.html
crates/fleischwolf-node/src/: lib.rs
crates/fleischwolf-node/test/: smoke.mjs
crates/fleischwolf-pdf/: Cargo.toml
crates/fleischwolf-pdf/examples/: dump_chars.rs  dump_regions.rs  layout.rs  snapshot.rs  tf_otsl.rs
crates/fleischwolf-pdf/src/: assemble.rs  layout.rs  lib.rs  mets.rs  ocr.rs  pdfium_backend.rs  tableformer.rs  textparse.rs  timing.rs
crates/fleischwolf-py/: Cargo.toml  README.md  pyproject.toml
crates/fleischwolf-py/python/fleischwolf/: __init__.py  models.py
crates/fleischwolf-py/src/: lib.rs
crates/fleischwolf-rag/: Cargo.toml  README.md
crates/fleischwolf-rag/src/: api.rs  config.rs  error.rs  lib.rs  metrics.rs  pipeline.rs
crates/fleischwolf-rag/src/chunk/: markdown.rs  mod.rs
crates/fleischwolf-rag/src/embed/: gemini.rs  hash.rs  mod.rs  ollama.rs  onnx.rs
crates/fleischwolf-rag/src/eval/: mod.rs
crates/fleischwolf-rag/src/llm/: mod.rs  openrouter.rs
crates/fleischwolf-rag/src/queue/: mod.rs  rabbitmq.rs
crates/fleischwolf-rag/src/retrieve/: bm25.rs  mod.rs
crates/fleischwolf-rag/src/source/: folder.rs  ftp.rs  mod.rs  sftp.rs
crates/fleischwolf-rag/src/store/: memory.rs  mod.rs  postgres.rs  sqlite.rs
crates/fleischwolf-rag/tests/: api.rs  pipeline.rs
crates/fleischwolf/examples/: stream.rs
crates/fleischwolf/src/: converter.rs  error.rs  lib.rs  stream.rs
crates/fleischwolf/src/backend/: asciidoc.rs  browser.rs  deepseek.rs  docling_json.rs  epub.rs  html.rs  images.rs  jats.rs  latex.rs  markdown.rs  mhtml.rs  mod.rs  odf.rs  ooxml.rs  uspto.rs  webvtt.rs  xlsx.rs
crates/fleischwolf/tests/: regression.rs
(+690 files in other folders)
