# docling.rs — a Rust port of docling.
#
# A Cargo workspace of nine crates:
#   docling-core  — the DoclingDocument data model + Markdown/JSON serializers
#   docling       — the DocumentConverter and the per-format backends
#   docling-pdf   — the PDF/image ML pipeline (pdfium text + ONNX layout/OCR)
#   docling-asr   — the audio/ASR pipeline (symphonia decode + ONNX Whisper)
#   docling-cli   — the `docling-rs` command-line binary
#   docling-node  — Node.js/Bun N-API bindings (npm `docling.rs`)
#   docling-rag   — RAG layer: chunking, embeddings, vector search, REST API
#   docling-serve — HTTP conversion API over a warm pipeline
#   docling-wasm  — WebAssembly bindings (declarative converters + PDF text layer)
# (crates/docling-py, the PyPI bindings, builds separately via maturin.)
#   docling-rag   — pluggable RAG (chunk/embed/store/search) over the converter
# See docs/MIGRATION.md for the Python → Rust mapping and what is / isn't ported.

[workspace]
resolver = "2"
members = [
    "crates/docling-core",
    "crates/docling",
    "crates/docling-asr",
    "crates/docling-cli",
    "crates/docling-pdf",
    # Node.js / Bun N-API bindings (published to npm, not crates.io).
    "crates/docling-node",
    # RAG subsystem: chunking + embeddings + vector store + semantic search.
    # A self-contained async (tokio) island; does not touch the sync crates above.
    "crates/docling-rag",
    # HTTP conversion API (docling-serve analogue): axum server over the converter.
    "crates/docling-serve",
    # wasm32 build of the declarative converters (browser/edge, issue #79).
    "crates/docling-wasm",
]

[workspace.package]
version = "0.42.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/docling-project/docling.rs"
homepage = "https://github.com/docling-project/docling.rs"
readme = "README.md"
keywords = ["docling", "document", "pdf", "markdown", "converter"]
categories = ["text-processing", "parser-implementations"]
# Honest floor for the crates that carry the PDF/ASR pipeline: the ort
# 2.0.0-rc.12 dependency requires rustc 1.88. docling-core
# overrides this with its own lower floor. CI's `msrv` job validates both
# against the committed Cargo.lock — bump here when a dependency update PR
# turns that job red and the new floor is acceptable.
rust-version = "1.88"

[profile.release]
lto = "thin"
