[package]
name = "docling-asr"
description = "Audio/ASR pipeline for docling.rs (Whisper via ONNX; a Rust port of docling's ASR pipeline)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# ort needs a newer compiler than the std-only crates' MSRV (same as docling-pdf).
rust-version = "1.85"

[dependencies]
docling-core = { path = "../docling-core", version = "0.40.2" }
# Same ort as docling-pdf so the workspace keeps a single ONNX runtime.
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
serde_json = "1"
# Pure-Rust audio demuxing/decoding for every container docling's ASR accepts:
# wav (pcm), mp3, flac, ogg/vorbis, aac (adts), m4a/mp4 (isomp4+aac).
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm", "mp3", "flac", "ogg", "vorbis", "aac", "isomp4"] }
