[package]
name = "docling-cli"
description = "Command-line interface for docling.rs (the `docling-rs` binary; a Rust port of docling)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "text-processing"]
rust-version.workspace = true

[[bin]]
name = "docling-rs"
path = "src/main.rs"

[features]
# Tokenization-aware chunking is on by default so `--to chunks` emits the
# hybrid records out of the box once download_dependencies.sh has fetched
# models/chunk/tokenizer.json (the hierarchical records need no tokenizer and
# are always available). `--no-default-features` drops the tokenizer dep.
default = ["chunking"]
# Pass through to the library's optional headless-browser HTML pre-render, so
# `cargo run -p docling-cli --features web-browser -- --use-web-browser …`
# activates it. Off by default (keeps the default binary browser-dependency-free).
web-browser = ["docling/web-browser"]
# Tokenization-aware chunking: enables the hybrid chunk records in `--to chunks`
# (the hierarchical ones need no tokenizer and are always available).
chunking = ["docling/chunking"]
# `docling-rs serve` subcommand: the HTTP conversion API (pulls the async
# stack — tokio/axum — so it is off by default; the standalone `docling-serve`
# binary is always available from its own crate).
serve = ["dep:docling-serve", "dep:tokio"]
# GPU execution providers for the PDF/image ML pipeline (#74) — pass-through
# to docling → docling-pdf. Build e.g. `--features cuda`, then select the
# provider at runtime: `DOCLING_RS_EP=cuda docling-rs input.pdf` (default
# remains cpu even in a GPU build).
cuda = ["docling/cuda"]
tensorrt = ["docling/tensorrt"]
directml = ["docling/directml"]
coreml = ["docling/coreml"]

[dependencies]
docling = { path = "../docling", version = "0.45.0" }
docling-serve = { path = "../docling-serve", version = "0.45.0", optional = true, default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
