[package]
name = "docling-core"
description = "Core DoclingDocument data model and serializers for docling.rs (a Rust port of docling)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# serde_json builds the docling-core-compatible DoclingDocument JSON wire format
# (export_to_json); the model itself stays plain (walked into `Value` by json.rs).
# `preserve_order` keeps docling's field order (schema_name, version, …).
serde_json = { version = "1", features = ["preserve_order"] }
