[package]
name = "docling-pdf"
description = "PDF/image backend for docling.rs: pdfium text extraction + ONNX layout/table/OCR pipeline."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
# GPU execution providers (#74). Each feature makes `ort` link/download an
# ONNX Runtime binary that contains that provider; which provider actually
# runs is chosen at startup via DOCLING_RS_EP (default: cpu). CPU stays the
# default build with zero GPU dependencies. directml is Windows-only and
# coreml is macOS-only (the underlying ONNX Runtime binaries only exist
# there); cuda/tensorrt are Linux + Windows.
# copy-dylibs rides along on every GPU feature: the CUDA/TensorRT providers
# are separate shared libraries (libonnxruntime_providers_*.so) that must sit
# next to the binary at runtime — without the copy, registration fails with a
# bare "cannot open shared object file" even on a machine with a working GPU.
cuda = ["ort/cuda", "ort/copy-dylibs"]
tensorrt = ["ort/tensorrt", "ort/copy-dylibs"]
directml = ["ort/directml", "ort/copy-dylibs"]
coreml = ["ort/coreml", "ort/copy-dylibs"]

[dependencies]
docling-core = { path = "../docling-core", version = "0.41.1" }
pdfium-render = "0.8"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
image = "0.25"
flate2 = "1"
tar = "0.4"
regex = "1.11"
lopdf = "0.34"
fast_image_resize = "5.1.4"
# CodeFormula enrichment decodes its VLM output with the HF tokenizer
# (models/code_formula/tokenizer.json) — same crate/features as docling-core's
# chunking tokenizer.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[lib]
name = "docling_pdf"
