# Python bindings for docling.rs (PyO3 + maturin) — a strangler-fig drop-in
# for Python docling's common path:
#
#     from docling_rs import DocumentConverter
#     md = DocumentConverter().convert("doc.pdf").document.export_to_markdown()
#
# Deliberately a STANDALONE crate (the empty [workspace] below opts it out of
# the repo workspace): it is built only by maturin, is NOT published to
# crates.io by scripts/ci/ci_publish.sh, and the PyPI name is still tentative.
# Build/test locally per this crate's README.md.
[package]
name = "docling-py"
# Fallback for local builds only — pyproject.toml's [project].version is what
# maturin ships, and CI (pypi-publish.yml) patches that from the workspace
# version at publish time.
version = "0.35.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/docling-project/docling.rs"
publish = false

[workspace]

[lib]
name = "docling_py"
crate-type = ["cdylib"]

[dependencies]
# `chunking` enables the HF-tokenizer-backed HybridChunker for docling_rs.chunking.
docling = { path = "../docling", features = ["chunking"] }
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
serde_json = "1"

[features]
# The GPU wheel (PyPI `docling-rs-cuda`, built by pypi-publish.yml's
# `cuda_wheel` input): compiles the CUDA execution provider in. A GPU build
# defaults to `auto` — GPU when usable, CPU fallback; `DOCLING_RS_EP=cpu`
# (or `AcceleratorOptions(device="cpu")`) forces CPU. The provider libraries
# ship next to the native module inside the wheel.
cuda = ["docling/cuda"]

[profile.release]
lto = "thin"
