# PyPI distribution name: `docling-rs`. Released manually via the
# `.github/workflows/pypi-publish.yml` workflow (workflow_dispatch), which builds
# the abi3 wheels + sdist and uploads them; local builds use maturin (see
# README.md).
[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "docling-rs"
version = "0.15.1"
description = "Rust port of docling (docling.rs): convert PDF/DOCX/HTML/... to Markdown or docling JSON. Python bindings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
# The document *model* and its serializers/chunkers are docling's own Python
# code: the Rust engine only produces the JSON wire format, which this package
# validates into a genuine `docling_core.types.doc.DoclingDocument`.
dependencies = [
    "docling-core>=2.0",
]

[project.urls]
Repository = "https://github.com/docling-project/docling.rs"

[tool.maturin]
module-name = "docling_rs._native"
python-source = "python"
