[package]
name = "docling-serve"
description = "HTTP conversion API over the docling.rs converter (docling-serve analogue)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# MSRV raised over the workspace default by tokio/axum; kept in step with
# docling-rag (the other async island).
rust-version = "1.85"

[features]
default = ["chunking"]
# Tokenization-aware chunking: enables the hybrid chunk records in `to=chunks`
# responses (hierarchical records work without it).
chunking = ["docling/chunking"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
docling = { path = "../docling", version = "0.40.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tokio-stream = "0.1"
# URL inputs are fetched with the same blocking client the converter already
# uses for remote <img src> (keeps the dependency graph to a single HTTP stack).
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
