[package]
name = "docling-serve"
description = "HTTP conversion API over the docling.rs converter (docling-serve analogue)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["chunking"]
# Tokenization-aware chunking: enables the hybrid chunk records in `to=chunks`
# responses (hierarchical records work without it).
chunking = ["docling/chunking"]
# GPU execution providers for the PDF/image ML pipeline (#74) — pass-through
# to docling → docling-pdf; select at runtime with DOCLING_RS_EP.
cuda = ["docling/cuda"]
tensorrt = ["docling/tensorrt"]
directml = ["docling/directml"]
coreml = ["docling/coreml"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
docling = { path = "../docling", version = "0.42.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal"] }
tokio-stream = "0.1"
# URL inputs are fetched with the same blocking client the converter already
# uses for remote <img src> (keeps the dependency graph to a single HTTP stack).
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
